--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "react-router-dom": "^4.1.1",
-    "rick-and-morty": "^1.0.1",
     "react-redux": "^5.0.1",
-    "redux": "^3.6.0"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "rick-and-morty": "^1.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
