--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "rick-and-morty": "^1.0.1"
+    "rick-and-morty": "^1.0.1",
+    "styled-components": "^2.4.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
