--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-redux": "^5.0.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.4.0",
     "redux-thunk": "^2.2.0",
     "rick-and-morty": "^1.0.1",
     "styled-components": "^2.4.0"
